force-app/main/default/objects/Aeropuerto__c/Aeropuerto__c.object-meta.xml
<CustomObject>
    <description>Un aeropuerto es una locación física que está acondicionado para recibir y despachar vuelos en diferentes ciudades</description>
    <label>Aeropuerto</label>
    <nameField>
        <label>Nombre del aeropuerto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aeropuertos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>