force-app/main/default/objects/Aeropuerto__c/fields/C_digo_IATA__c.field-meta.xml
<CustomField>
    <fullName>C_digo_IATA__c</fullName>
    <description>El código de aeropuertos de IATA está formado por grupos de tres letras, que designan a cada aeropuerto del mundo</description>
    <label>Código IATA</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>