force-app/main/default/objects/Aeropuerto__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <description>Lista de selección de ciudades dependiente de la lista de selección de paises</description>
    <label>Ciudad</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pais__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bamiyán</fullName>
            </value>
            <value>
                <fullName>Bagram</fullName>
            </value>
            <value>
                <fullName>Lashkar Gah</fullName>
            </value>
            <value>
                <fullName>Fayzabad</fullName>
            </value>
            <value>
                <fullName>Herat</fullName>
            </value>
            <value>
                <fullName>Jalalabad</fullName>
            </value>
            <value>
                <fullName>Kabul</fullName>
            </value>
            <value>
                <fullName>Kandahar</fullName>
            </value>
            <value>
                <fullName>Mazar-e Sarif</fullName>
            </value>
            <value>
                <fullName>Colonia, Bonn</fullName>
            </value>
            <value>
                <fullName>Fráncfort del Meno</fullName>
            </value>
            <value>
                <fullName>Hannover</fullName>
            </value>
            <value>
                <fullName>Hamburgo</fullName>
            </value>
            <value>
                <fullName>Heligoland</fullName>
            </value>
            <value>
                <fullName>Fráncfort</fullName>
            </value>
            <value>
                <fullName>Munich</fullName>
            </value>
            <value>
                <fullName>Berlín</fullName>
            </value>
            <value>
                <fullName>Luanda</fullName>
            </value>
            <value>
                <fullName>Riad</fullName>
            </value>
            <value>
                <fullName>Buenos Aires</fullName>
            </value>
            <value>
                <fullName>San Rafael</fullName>
            </value>
            <value>
                <fullName>Paso de los Libres</fullName>
            </value>
            <value>
                <fullName>San Carlos de Bariloche</fullName>
            </value>
            <value>
                <fullName>Córdoba</fullName>
            </value>
            <value>
                <fullName>Clorinda</fullName>
            </value>
            <value>
                <fullName>Ciudad de Corrientes</fullName>
            </value>
            <value>
                <fullName>Concordia</fullName>
            </value>
            <value>
                <fullName>San Fernando del Valle de Catamarca</fullName>
            </value>
            <value>
                <fullName>Ezeiza</fullName>
            </value>
            <value>
                <fullName>San Fernando</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>