force-app/main/default/objects/Aeropuerto__c/fields/Codigo_de_Aeropuerto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Aeropuerto__c</fullName>
    <description>Código de identificación de un aeropuerto</description>
    <displayFormat>A-{0000}</displayFormat>
    <label>Código de Aeropuerto</label>
    <type>AutoNumber</type>
</CustomField>