force-app/main/default/objects/Aeropuerto__c/fields/Localizacion__c.field-meta.xml
<CustomField>
    <fullName>Localizacion__c</fullName>
    <description>Localizacion del aeropuerto</description>
    <label>Localizacion</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>