force-app/main/default/objects/Aeropuerto__c/fields/Recibe_vuelos_internacionales__c.field-meta.xml
<CustomField>
    <fullName>Recibe_vuelos_internacionales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla de verificacion para vuelos internacionales</description>
    <label>Recibe vuelos internacionales</label>
    <type>Checkbox</type>
</CustomField>