force-app/main/default/objects/Aeropuerto__c/listViews/Aeropuertos_internacionales.listView-meta.xml
<ListView>
    <fullName>Aeropuertos_internacionales</fullName>
    <columns>NAME</columns>
    <columns>C_digo_IATA__c</columns>
    <columns>Pais__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Recibe_vuelos_internacionales__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Aeropuertos internacionales</label>
    <sharedTo>
        <role>Supervisor_de_vuelo</role>
    </sharedTo>
</ListView>