force-app/main/default/objects/Aeropuerto__c/listViews/Aeropuertos_locales.listView-meta.xml
<ListView>
    <fullName>Aeropuertos_locales</fullName>
    <columns>NAME</columns>
    <columns>C_digo_IATA__c</columns>
    <columns>Pais__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Recibe_vuelos_nacionales__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Aeropuertos locales</label>
    <sharedTo>
        <role>Supervisor_de_ventas</role>
    </sharedTo>
</ListView>